# rag-demo

./: .gitignore  README.md  pyproject.toml
config/: models.yaml
prompts/select_doc/: prompt.md.jinja
src/: build_faiss_index_from_duckdb.py  build_index.py  download_scidocs_to_duckdb.py  ingest_wiki.py  run_scidocs_rag_eval.py  test_faiss_index.py  test_openrouter_select_doc.py
