[project]
name = "rag-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.3.0",
    "duckdb>=1.4.1",
    "faiss-cpu>=1.12.0",
    "ir-datasets>=0.5.11",
    "numpy>=2.3.4",
    "orjson>=3.11.4",
    "sentence-transformers>=5.1.2",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
]

[tool.uv]
cache-dir = ".uv_cache"

